[gd_scene load_steps=27 format=3 uid="uid://bafh64um52nek"]

[ext_resource type="Texture2D" path="res://sprites/character/Idle.png" id="1_i12sp"]
[ext_resource type="Script" path="res://scripts/character/character.gd" id="1_yx3y3"]
[ext_resource type="Texture2D" path="res://sprites/character/Stickman1.png" id="2_y0885"]
[ext_resource type="Texture2D" path="res://sprites/character/Stickman2.png" id="3_mg5o2"]
[ext_resource type="Texture2D" path="res://sprites/character/Stickman3.png" id="4_j6aka"]
[ext_resource type="Texture2D" path="res://sprites/character/Stickman4.png" id="5_kyroe"]
[ext_resource type="Texture2D" uid="uid://c2kcpdmimd5qp" path="res://sprites/character_2/Idle.png" id="7_2pyc3"]
[ext_resource type="Texture2D" uid="uid://btpcvygmwppks" path="res://sprites/character_2/Stickman1.png" id="8_74nfh"]
[ext_resource type="Texture2D" uid="uid://4kkvp3wsx1u0" path="res://sprites/character_2/Stickman2.png" id="9_h7j1e"]
[ext_resource type="Texture2D" uid="uid://m1axhcmlw7r4" path="res://sprites/character_2/Stickman3.png" id="10_snlpr"]
[ext_resource type="Texture2D" uid="uid://dka3vrcvc0jyn" path="res://sprites/character_2/Stickman4.png" id="11_2h2ol"]
[ext_resource type="Texture2D" uid="uid://dri331dj3nk3p" path="res://sprites/swipes/1.png" id="12_2ysnm"]
[ext_resource type="Texture2D" uid="uid://csjoeim2d5wsx" path="res://sprites/swipes/2.png" id="13_8ktih"]
[ext_resource type="Texture2D" uid="uid://bicxt668rdp75" path="res://sprites/swipes/3.png" id="14_n8srp"]
[ext_resource type="Texture2D" uid="uid://c8nmtqo4bu4lr" path="res://sprites/swipes/4.png" id="15_50k1c"]
[ext_resource type="Texture2D" uid="uid://cgj3i5vckqlv0" path="res://sprites/swipes/5.png" id="16_65mnn"]
[ext_resource type="Texture2D" uid="uid://dqoipo3ha0msy" path="res://sprites/swipes/6.png" id="17_w7jas"]
[ext_resource type="Texture2D" uid="uid://dpgxop4e1ceio" path="res://sprites/swipes/7.png" id="18_qbaop"]
[ext_resource type="Texture2D" uid="uid://d0rorb2fk1410" path="res://sprites/swipes/8.png" id="19_8skkn"]
[ext_resource type="Texture2D" uid="uid://dko0l6apvphvg" path="res://sprites/swipes/9.png" id="20_qlj12"]
[ext_resource type="Texture2D" uid="uid://bswpvqq1m5sm0" path="res://sprites/swipes/10.png" id="21_wfn2f"]
[ext_resource type="Texture2D" uid="uid://msd04k4qaq4f" path="res://sprites/swipes/11.png" id="22_k5v1l"]
[ext_resource type="Texture2D" uid="uid://c5w5g6huq36bw" path="res://sprites/swipes/12.png" id="23_68l0d"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ytmpc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_i12sp")
}, {
"duration": 1.0,
"texture": ExtResource("2_y0885")
}, {
"duration": 1.0,
"texture": ExtResource("3_mg5o2")
}, {
"duration": 1.0,
"texture": ExtResource("4_j6aka")
}, {
"duration": 1.0,
"texture": ExtResource("5_kyroe")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_2pyc3")
}, {
"duration": 1.0,
"texture": ExtResource("8_74nfh")
}, {
"duration": 1.0,
"texture": ExtResource("9_h7j1e")
}, {
"duration": 1.0,
"texture": ExtResource("10_snlpr")
}, {
"duration": 1.0,
"texture": ExtResource("11_2h2ol")
}],
"loop": true,
"name": &"test",
"speed": 1.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_y2s5t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_2ysnm")
}, {
"duration": 1.0,
"texture": ExtResource("13_8ktih")
}, {
"duration": 1.0,
"texture": ExtResource("14_n8srp")
}, {
"duration": 1.0,
"texture": ExtResource("15_50k1c")
}, {
"duration": 1.0,
"texture": ExtResource("16_65mnn")
}, {
"duration": 1.0,
"texture": ExtResource("17_w7jas")
}, {
"duration": 1.0,
"texture": ExtResource("18_qbaop")
}, {
"duration": 1.0,
"texture": ExtResource("19_8skkn")
}, {
"duration": 1.0,
"texture": ExtResource("20_qlj12")
}, {
"duration": 1.0,
"texture": ExtResource("21_wfn2f")
}, {
"duration": 1.0,
"texture": ExtResource("22_k5v1l")
}, {
"duration": 1.0,
"texture": ExtResource("23_68l0d")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rn3ru"]
size = Vector2(546, 569)

[node name="Character" type="Area2D"]
position = Vector2(641, 390)
script = ExtResource("1_yx3y3")

[node name="Figure" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_ytmpc")
animation = &"test"

[node name="Slice" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_y2s5t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_rn3ru")

[node name="EvadeTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="timeout" from="EvadeTimer" to="." method="_on_evade_timer_timeout"]
